feat: implement lab with java modern features